Implementação da API do Gemini funcional com passagem da API como parâmetro